--- a/src/Module 5/Introduction to Data Preprocessing & Cleaning/Ques_1.ipynb
+++ b/src/Module 5/Introduction to Data Preprocessing & Cleaning/Ques_1.ipynb
@@ -2,20 +2,120 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned DataFrame:\n",
+      "        Age     Salary  Gender  Age_to_Salary_Ratio\n",
+      "0  3.218876  10.819778    Male             0.297499\n",
+      "1  3.401197  11.002100  Female             0.309141\n",
+      "2  3.555348  11.082143  Female             0.320818\n",
+      "3  6.907755  11.289782    Male             0.611859\n",
+      "4  3.806662   0.000000  Female                  NaN\n",
+      "5  5.047449  11.512925  Female             0.438416\n",
+      "6  3.912023  11.608236    Male             0.337004\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_606/2302542846.py:45: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].apply(lambda x: np.log(x) if x > 0 else x)\n",
+      "/tmp/ipykernel_606/2302542846.py:51: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['Age_to_Salary_Ratio'] = df.apply(\n"
+     ]
+    }
+   ],
    "source": [
     "# Question: Advanced Data Cleaning with Multiple Issues\n",
     "# Objective: Handle multiple issues in one dataset, including missing values, duplicates, and outliers.\n",
     "# Description: Given a dataset with various data quality issues, employ multiple data cleaning techniques.\n",
     "\n",
-    "\n"
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "\n",
+    "# Sample dataset with multiple issues\n",
+    "data = {\n",
+    "    'Age': [25, 30, 35, 1000, 45, np.nan, 50, 30, 30],\n",
+    "    'Salary': [50000, 60000, None, 80000, 0, 100000, 110000, 60000, 60000],\n",
+    "    'Gender': ['Male', 'Female', 'Female', 'Male', None, 'Female', 'Male', 'Female', 'Female']\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Function to handle missing values\n",
+    "def handle_missing_values(df):\n",
+    "    for column in df.select_dtypes(include=[np.number]).columns:\n",
+    "        df[column] = df[column].fillna(df[column].mean())\n",
+    "    for column in df.select_dtypes(include=['object']).columns:\n",
+    "        df[column] = df[column].fillna(df[column].mode()[0])\n",
+    "    return df\n",
+    "\n",
+    "# Function to remove duplicates\n",
+    "def remove_duplicates(df):\n",
+    "    return df.drop_duplicates(keep='first')\n",
+    "\n",
+    "# Function to handle outliers using Z-score\n",
+    "\n",
+    "def handle_outliers_zscore(df):\n",
+    "    numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
+    "    for col in numeric_cols:\n",
+    "        z_scores = np.abs(stats.zscore(df[col]))\n",
+    "        median = df[col].median()\n",
+    "        df.loc[z_scores > 3, col] = median\n",
+    "    return df\n",
+    "\n",
+    "# Function to apply log transformation (only on positive values)\n",
+    "def apply_log_transformation(df):\n",
+    "    numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
+    "    for col in numeric_cols:\n",
+    "        df[col] = df[col].apply(lambda x: np.log(x) if x > 0 else x)\n",
+    "    return df\n",
+    "\n",
+    "# Function to add a new feature\n",
+    "\n",
+    "def add_age_to_salary_ratio(df):\n",
+    "    df['Age_to_Salary_Ratio'] = df.apply(\n",
+    "        lambda row: row['Age'] / row['Salary'] if row['Salary'] not in [0, None, np.nan] else np.nan,\n",
+    "        axis=1\n",
+    "    )\n",
+    "    return df\n",
+    "\n",
+    "# Cleaning pipeline\n",
+    "def clean_data_pipeline(df):\n",
+    "    df = handle_missing_values(df)\n",
+    "    df = remove_duplicates(df)\n",
+    "    df = handle_outliers_zscore(df)\n",
+    "    df = apply_log_transformation(df)\n",
+    "    df = add_age_to_salary_ratio(df)\n",
+    "    return df\n",
+    "\n",
+    "# Apply the pipeline\n",
+    "cleaned_df = clean_data_pipeline(df)\n",
+    "\n",
+    "# Display the cleaned DataFrame\n",
+    "print(\"Cleaned DataFrame:\")\n",
+    "print(cleaned_df)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -213,27 +313,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned DataFrame:\n",
+      "        Age     Salary  Gender  Age_to_Salary_Ratio\n",
+      "0  3.218876  10.819778    Male             0.297499\n",
+      "1  3.401197  11.002100  Female             0.309141\n",
+      "2  3.555348  11.082143  Female             0.320818\n",
+      "3  6.907755  11.289782    Male             0.611859\n",
+      "4  3.806662   0.000000  Female                  NaN\n",
+      "5  5.047449  11.512925  Female             0.438416\n",
+      "6  3.912023  11.608236    Male             0.337004\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_606/306163412.py:44: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].apply(lambda x: np.log(x) if x > 0 else x)\n",
+      "/tmp/ipykernel_606/306163412.py:50: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['Age_to_Salary_Ratio'] = df.apply(\n"
+     ]
+    }
+   ],
    "source": [
     "# Question: Handling Complex Outliers with Z-Scores\n",
     "# Objective: Detect and handle outliers using Z-score method.\n",
     "# Description: Use the Z-score method to identify outliers which significantly differ from the rest of the data points.\n",
     "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "\n",
+    "# Sample dataset with multiple issues\n",
+    "data = {\n",
+    "    'Age': [25, 30, 35, 1000, 45, np.nan, 50, 30, 30],\n",
+    "    'Salary': [50000, 60000, None, 80000, 0, 100000, 110000, 60000, 60000],\n",
+    "    'Gender': ['Male', 'Female', 'Female', 'Male', None, 'Female', 'Male', 'Female', 'Female']\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Function to handle missing values\n",
+    "def handle_missing_values(df):\n",
+    "    for column in df.select_dtypes(include=[np.number]).columns:\n",
+    "        df[column] = df[column].fillna(df[column].mean())\n",
+    "    for column in df.select_dtypes(include=['object']).columns:\n",
+    "        df[column] = df[column].fillna(df[column].mode()[0])\n",
+    "    return df\n",
+    "\n",
+    "# Function to remove duplicates\n",
+    "def remove_duplicates(df):\n",
+    "    return df.drop_duplicates(keep='first')\n",
+    "\n",
+    "# Function to handle outliers using Z-score\n",
+    "\n",
+    "def handle_outliers_zscore(df):\n",
+    "    numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
+    "    for col in numeric_cols:\n",
+    "        z_scores = np.abs(stats.zscore(df[col]))\n",
+    "        median = df[col].median()\n",
+    "        df.loc[z_scores > 3, col] = median\n",
+    "    return df\n",
+    "\n",
+    "# Function to apply log transformation (only on positive values)\n",
+    "def apply_log_transformation(df):\n",
+    "    numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
+    "    for col in numeric_cols:\n",
+    "        df[col] = df[col].apply(lambda x: np.log(x) if x > 0 else x)\n",
+    "    return df\n",
+    "\n",
+    "# Function to add a new feature\n",
+    "\n",
+    "def add_age_to_salary_ratio(df):\n",
+    "    df['Age_to_Salary_Ratio'] = df.apply(\n",
+    "        lambda row: row['Age'] / row['Salary'] if row['Salary'] not in [0, None, np.nan] else np.nan,\n",
+    "        axis=1\n",
+    "    )\n",
+    "    return df\n",
+    "\n",
+    "# Cleaning pipeline\n",
+    "def clean_data_pipeline(df):\n",
+    "    df = handle_missing_values(df)\n",
+    "    df = remove_duplicates(df)\n",
+    "    df = handle_outliers_zscore(df)\n",
+    "    df = apply_log_transformation(df)\n",
+    "    df = add_age_to_salary_ratio(df)\n",
+    "    return df\n",
+    "\n",
+    "# Apply the pipeline\n",
+    "cleaned_df = clean_data_pipeline(df)\n",
+    "\n",
+    "# Display the cleaned DataFrame\n",
+    "print(\"Cleaned DataFrame:\")\n",
+    "print(cleaned_df)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned DataFrame:\n",
+      "        Age     Salary  Gender  Age_to_Salary_Ratio\n",
+      "0  3.218876  10.819778    Male             0.297499\n",
+      "1  3.401197  11.002100  Female             0.309141\n",
+      "2  3.555348  11.082143  Female             0.320818\n",
+      "3  6.907755  11.289782    Male             0.611859\n",
+      "4  3.806662   0.000000  Female                  NaN\n",
+      "5  5.047449  11.512925  Female             0.438416\n",
+      "6  3.912023  11.608236    Male             0.337004\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_606/1832039676.py:44: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[col] = df[col].apply(lambda x: np.log(x) if x > 0 else x)\n",
+      "/tmp/ipykernel_606/1832039676.py:50: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['Age_to_Salary_Ratio'] = df.apply(\n"
+     ]
+    }
+   ],
    "source": [
     "# Question: Data Imputation with K-Nearest Neighbors (KNN)\n",
     "# Objective: Impute missing numerical values using the KNN method.\n",
     "# Description: Use the K-nearest neighbors algorithm to fill in missing values, which considers the values of\n",
     "# nearest neighbors for imputation.\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "\n",
+    "# Sample dataset with multiple issues\n",
+    "data = {\n",
+    "    'Age': [25, 30, 35, 1000, 45, np.nan, 50, 30, 30],\n",
+    "    'Salary': [50000, 60000, None, 80000, 0, 100000, 110000, 60000, 60000],\n",
+    "    'Gender': ['Male', 'Female', 'Female', 'Male', None, 'Female', 'Male', 'Female', 'Female']\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Function to handle missing values\n",
+    "def handle_missing_values(df):\n",
+    "    for column in df.select_dtypes(include=[np.number]).columns:\n",
+    "        df[column] = df[column].fillna(df[column].mean())\n",
+    "    for column in df.select_dtypes(include=['object']).columns:\n",
+    "        df[column] = df[column].fillna(df[column].mode()[0])\n",
+    "    return df\n",
+    "\n",
+    "# Function to remove duplicates\n",
+    "def remove_duplicates(df):\n",
+    "    return df.drop_duplicates(keep='first')\n",
+    "\n",
+    "# Function to handle outliers using Z-score\n",
+    "\n",
+    "def handle_outliers_zscore(df):\n",
+    "    numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
+    "    for col in numeric_cols:\n",
+    "        z_scores = np.abs(stats.zscore(df[col]))\n",
+    "        median = df[col].median()\n",
+    "        df.loc[z_scores > 3, col] = median\n",
+    "    return df\n",
+    "\n",
+    "# Function to apply log transformation (only on positive values)\n",
+    "def apply_log_transformation(df):\n",
+    "    numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
+    "    for col in numeric_cols:\n",
+    "        df[col] = df[col].apply(lambda x: np.log(x) if x > 0 else x)\n",
+    "    return df\n",
+    "\n",
+    "# Function to add a new feature\n",
+    "\n",
+    "def add_age_to_salary_ratio(df):\n",
+    "    df['Age_to_Salary_Ratio'] = df.apply(\n",
+    "        lambda row: row['Age'] / row['Salary'] if row['Salary'] not in [0, None, np.nan] else np.nan,\n",
+    "        axis=1\n",
+    "    )\n",
+    "    return df\n",
+    "\n",
+    "# Cleaning pipeline\n",
+    "def clean_data_pipeline(df):\n",
+    "    df = handle_missing_values(df)\n",
+    "    df = remove_duplicates(df)\n",
+    "    df = handle_outliers_zscore(df)\n",
+    "    df = apply_log_transformation(df)\n",
+    "    df = add_age_to_salary_ratio(df)\n",
+    "    return df\n",
+    "\n",
+    "# Apply the pipeline\n",
+    "cleaned_df = clean_data_pipeline(df)\n",
+    "\n",
+    "# Display the cleaned DataFrame\n",
+    "print(\"Cleaned DataFrame:\")\n",
+    "print(cleaned_df)\n",
     "\n",
     "\n"
    ]
