Add code and examples for Types of Data Issues in Ques_2.ipynb

--- a/src/Module 5/Introduction to Data Preprocessing & Cleaning/Ques_2.ipynb
+++ b/src/Module 5/Introduction to Data Preprocessing & Cleaning/Ques_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,85 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original DataFrame:\n",
-      "   ID     Name   Age         City Signup Date  Score\n",
-      "0   1    Alice  25.0     New York  2021-01-01     85\n",
-      "1   2      Bob  30.0     new york  01/02/2021     90\n",
-      "2   2      Bob  30.0     new york  01/02/2021     90\n",
-      "3   4  Charlie  22.0  Los Angeles  2021-03-04     88\n",
-      "4   5    David   NaN      Chicago  03-15-2021   9999\n",
-      "5   6      Eve  29.0         None  2021/04/01     87\n",
-      "6   7     None  28.0       Boston                 89\n",
-      "7   8    Grace  27.0       Boston  2021-05-01     88\n",
+      "⚠️ Warning: Dataset contains missing values.\n",
       "\n",
-      "--- Missing Data ---\n",
-      "ID             0\n",
-      "Name           1\n",
-      "Age            1\n",
-      "City           1\n",
-      "Signup Date    0\n",
-      "Score          0\n",
-      "dtype: int64\n",
-      "\n",
-      "--- Duplicates ---\n",
-      "0    False\n",
-      "1    False\n",
-      "2     True\n",
-      "3    False\n",
-      "4    False\n",
-      "5    False\n",
-      "6    False\n",
-      "7    False\n",
-      "dtype: bool\n",
-      "\n",
-      "--- Before Standardizing City ---\n",
-      "City\n",
-      "Boston         2\n",
-      "New York       1\n",
-      "new york       1\n",
-      "Los Angeles    1\n",
-      "Chicago        1\n",
-      "Unknown        1\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "--- After Standardizing City ---\n",
-      "City\n",
-      "new york       2\n",
-      "boston         2\n",
-      "los angeles    1\n",
-      "chicago        1\n",
-      "unknown        1\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "--- Outlier Detection in Score ---\n",
-      "count       7.000000\n",
-      "mean     1503.714286\n",
-      "std      3746.069216\n",
-      "min        85.000000\n",
-      "25%        87.500000\n",
-      "50%        88.000000\n",
-      "75%        89.500000\n",
-      "max      9999.000000\n",
-      "Name: Score, dtype: float64\n",
-      "\n",
-      "--- Converting Signup Date ---\n",
-      "0   2021-01-01\n",
-      "1          NaT\n",
-      "3   2021-03-04\n",
-      "4          NaT\n",
-      "5          NaT\n",
-      "6          NaT\n",
-      "7   2021-05-01\n",
-      "Name: Signup Date, dtype: datetime64[ns]\n",
-      "\n",
-      "--- Cleaned DataFrame ---\n",
+      "✅ Cleaned DataFrame:\n",
       "   ID     Name        Age         City Signup Date  Score\n",
       "0   1    Alice  25.000000     new york  2021-01-01   85.0\n",
       "1   2      Bob  30.000000     new york         NaT   90.0\n",
@@ -296,20 +227,14 @@
     }
    ],
    "source": [
-    "# 3. Incorrect Data Types: Data stored in incorrect formats can lead to parsing errors or incorrect analysis.\n",
-    "#     Task 1: Convert a column of string numbers to integers in a dataset.\n",
-    "#     Task 2: Identify and correct columns with inconsistent data types in a dataset.\n",
-    "#     Task 3: Discuss why correct data types are critical for feature engineering.\n",
-    "    \n",
-    "    \n",
-    "    # Ques_2.ipynb\n",
+    "# Ques_2.ipynb\n",
     "# Module 5: Introduction to Data Preprocessing & Cleaning\n",
     "# Task: Types of Data Issues\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# Sample dataset with various data issues\n",
+    "# --- Load Data (Single Instance) ---\n",
     "data = {\n",
     "    'ID': [1, 2, 2, 4, 5, 6, 7, 8],\n",
     "    'Name': ['Alice', 'Bob', 'Bob', 'Charlie', 'David', 'Eve', None, 'Grace'],\n",
@@ -321,75 +246,63 @@
     "\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "print(\"Original DataFrame:\")\n",
+    "# --- Preprocessing Functions ---\n",
+    "\n",
+    "def fill_missing_values(df):\n",
+    "    df['Age'].fillna(df['Age'].mean(), inplace=True)\n",
+    "    df['City'].fillna('Unknown', inplace=True)\n",
+    "    df['Name'].fillna('NoName', inplace=True)\n",
+    "    return df\n",
+    "\n",
+    "def remove_duplicates(df):\n",
+    "    return df.drop_duplicates()\n",
+    "\n",
+    "def standardize_city_names(df):\n",
+    "    df['City'] = df['City'].str.lower().str.strip()\n",
+    "    return df\n",
+    "\n",
+    "def detect_and_handle_outliers(df, column):\n",
+    "    # Use IQR to detect outliers\n",
+    "    Q1 = df[column].quantile(0.25)\n",
+    "    Q3 = df[column].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    lower_bound = Q1 - 1.5 * IQR\n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
+    "\n",
+    "    # Replace outliers with the median\n",
+    "    median_value = df[(df[column] >= lower_bound) & (df[column] <= upper_bound)][column].median()\n",
+    "    df[column] = df[column].apply(lambda x: median_value if x < lower_bound or x > upper_bound else x)\n",
+    "    return df\n",
+    "\n",
+    "def convert_signup_date(df):\n",
+    "    df['Signup Date'] = pd.to_datetime(df['Signup Date'], errors='coerce')\n",
+    "    return df\n",
+    "\n",
+    "def check_anomalies(df):\n",
+    "    if df.isnull().sum().any():\n",
+    "        print(\"⚠️ Warning: Dataset contains missing values.\")\n",
+    "    if (df['Score'] > 1000).any():\n",
+    "        print(\"⚠️ Warning: Extremely high scores detected; possible outliers.\")\n",
+    "\n",
+    "# --- Run Preprocessing Pipeline ---\n",
+    "df = fill_missing_values(df)\n",
+    "df = remove_duplicates(df)\n",
+    "df = standardize_city_names(df)\n",
+    "df = detect_and_handle_outliers(df, 'Score')\n",
+    "df = convert_signup_date(df)\n",
+    "check_anomalies(df)\n",
+    "\n",
+    "# --- Final Cleaned Data ---\n",
+    "print(\"\\n✅ Cleaned DataFrame:\")\n",
     "print(df)\n",
     "\n",
-    "# ---------------------------\n",
-    "# 1. Missing Data\n",
-    "# ---------------------------\n",
-    "print(\"\\n--- Missing Data ---\")\n",
-    "print(df.isnull().sum())\n",
-    "\n",
-    "# Fill missing Age with mean\n",
-    "df['Age'].fillna(df['Age'].mean(), inplace=True)\n",
-    "\n",
-    "# Fill missing City with 'Unknown'\n",
-    "df['City'].fillna('Unknown', inplace=True)\n",
-    "\n",
-    "# Fill missing Name with 'NoName'\n",
-    "df['Name'].fillna('NoName', inplace=True)\n",
-    "\n",
-    "# ---------------------------\n",
-    "# 2. Duplicate Data\n",
-    "# ---------------------------\n",
-    "print(\"\\n--- Duplicates ---\")\n",
-    "print(df.duplicated())\n",
-    "\n",
-    "# Drop duplicates\n",
-    "df = df.drop_duplicates()\n",
-    "\n",
-    "# ---------------------------\n",
-    "# 3. Inconsistent Data\n",
-    "# ---------------------------\n",
-    "print(\"\\n--- Before Standardizing City ---\")\n",
-    "print(df['City'].value_counts())\n",
-    "\n",
-    "# Standardize city names\n",
-    "df['City'] = df['City'].str.lower().str.strip()\n",
-    "\n",
-    "print(\"\\n--- After Standardizing City ---\")\n",
-    "print(df['City'].value_counts())\n",
-    "\n",
-    "# ---------------------------\n",
-    "# 4. Outliers\n",
-    "# ---------------------------\n",
-    "print(\"\\n--- Outlier Detection in Score ---\")\n",
-    "print(df['Score'].describe())\n",
-    "\n",
-    "# Replace outlier score (9999) with median\n",
-    "median_score = df[df['Score'] < 100]['Score'].median()\n",
-    "df['Score'] = df['Score'].apply(lambda x: median_score if x > 1000 else x)\n",
-    "\n",
-    "# ---------------------------\n",
-    "# 5. Incorrect Data Types\n",
-    "# ---------------------------\n",
-    "print(\"\\n--- Converting Signup Date ---\")\n",
-    "df['Signup Date'] = pd.to_datetime(df['Signup Date'], errors='coerce')\n",
-    "print(df['Signup Date'])\n",
-    "\n",
-    "# ---------------------------\n",
-    "# 6. Summary of Cleaned Data\n",
-    "# ---------------------------\n",
-    "print(\"\\n--- Cleaned DataFrame ---\")\n",
-    "print(df)\n",
-    "\n",
-    "# Save cleaned data\n",
-    "df.to_csv(\"cleaned_data.csv\", index=False)\n"
+    "# Save cleaned data (optional)\n",
+    "# df.to_csv(\"cleaned_data.csv\", index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
