Removed duplicates and fixed data types in Ques_2.ipynb using samp_data.csv

--- a/src/Module 5/Hands-on - Data Cleaning with Pandas/Ques_2.ipynb
+++ b/src/Module 5/Hands-on - Data Cleaning with Pandas/Ques_2.ipynb
@@ -2,84 +2,112 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original Dataset:\n",
+      "✅ Dataset loaded successfully.\n",
+      "\n",
+      "🔍 Preview of raw data:\n",
       "     A         B    C    D\n",
       "0  1.0       cat  1.1  NaN\n",
       "1  2.0       dog  NaN  NaN\n",
       "2  NaN    rabbit  3.5  3.2\n",
       "3  4.0       NaN  4.0  4.1\n",
       "4  5.0  elephant  NaN  5.0\n",
+      "🧹 Removed 0 duplicate rows.\n",
       "\n",
-      "Number of duplicate rows: 0\n",
-      "Shape after removing duplicates: (5, 4)\n",
-      "\n",
-      "Current Data Types:\n",
+      "✅ Final data types:\n",
       "A    float64\n",
       "B     object\n",
       "C    float64\n",
       "D    float64\n",
       "dtype: object\n",
-      "\n",
-      "Updated Data Types (after conversions):\n",
-      "A    float64\n",
-      "B     object\n",
-      "C    float64\n",
-      "D    float64\n",
-      "dtype: object\n",
-      "\n",
-      "Cleaned data saved to 'cleaned_data_Q2.csv'\n"
+      "💾 Cleaned data saved to 'cleaned_data_Q2.csv'.\n"
      ]
     }
    ],
    "source": [
-    "# Step 1: Import Required Libraries\n",
     "import pandas as pd\n",
     "\n",
-    "# Step 2: Load the Dataset\n",
-    "df = pd.read_csv('samp_data.csv')  \n",
+    "# Step 1: Load dataset with error handling\n",
+    "def load_data(file_path):\n",
+    "    try:\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        print(\"✅ Dataset loaded successfully.\")\n",
+    "        return df\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"❌ Error: File '{file_path}' not found.\")\n",
+    "    except pd.errors.EmptyDataError:\n",
+    "        print(\"❌ Error: File is empty.\")\n",
+    "    except pd.errors.ParserError:\n",
+    "        print(\"❌ Error: File is corrupted or not properly formatted.\")\n",
+    "    return None\n",
     "\n",
-    "# Step 3: Display First Few Rows\n",
-    "print(\"Original Dataset:\")\n",
-    "print(df.head())\n",
+    "# Step 2: Remove duplicates based on specific columns (if any), or entire row\n",
+    "def remove_duplicates(df, subset_columns=None):\n",
+    "    initial_shape = df.shape\n",
+    "    df_cleaned = df.drop_duplicates(subset=subset_columns)\n",
+    "    print(f\"🧹 Removed {initial_shape[0] - df_cleaned.shape[0]} duplicate rows.\")\n",
+    "    return df_cleaned\n",
     "\n",
-    "# Step 4: Check for Duplicates\n",
-    "duplicate_count = df.duplicated().sum()\n",
-    "print(f\"\\nNumber of duplicate rows: {duplicate_count}\")\n",
+    "# Step 3: Fix data types with error handling\n",
+    "def fix_data_types(df, conversions):\n",
+    "    for col, dtype in conversions.items():\n",
+    "        try:\n",
+    "            if dtype == 'datetime':\n",
+    "                df[col] = pd.to_datetime(df[col])\n",
+    "            else:\n",
+    "                df[col] = df[col].astype(dtype)\n",
+    "            print(f\"✅ Converted column '{col}' to {dtype}.\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"❌ Failed to convert column '{col}' to {dtype}. Error: {e}\")\n",
+    "    return df\n",
     "\n",
-    "# Step 5: Remove Duplicates\n",
-    "df_no_duplicates = df.drop_duplicates()\n",
-    "print(\"Shape after removing duplicates:\", df_no_duplicates.shape)\n",
+    "# Step 4: Save cleaned data\n",
+    "def save_cleaned_data(df, output_path):\n",
+    "    try:\n",
+    "        df.to_csv(output_path, index=False)\n",
+    "        print(f\"💾 Cleaned data saved to '{output_path}'.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Failed to save cleaned data. Error: {e}\")\n",
     "\n",
-    "# Step 6: Check Current Data Types\n",
-    "print(\"\\nCurrent Data Types:\")\n",
-    "print(df_no_duplicates.dtypes)\n",
+    "# --- MAIN EXECUTION ---\n",
     "\n",
-    "# Step 7: Fix Data Types (Example Fixes)\n",
-    "# Note: Update these based on your actual column names and needs\n",
+    "# Define the input/output files\n",
+    "input_file = 'samp_data.csv'\n",
+    "output_file = 'cleaned_data_Q2.csv'\n",
     "\n",
-    "# Example: Convert numeric columns\n",
-    "# df_no_duplicates['age'] = df_no_duplicates['age'].astype(int)\n",
+    "# Define data type conversions as a dictionary\n",
+    "# Example: {'age': 'int', 'date_joined': 'datetime', 'customer_id': 'str'}\n",
+    "conversions = {\n",
+    "    # Add your actual columns here\n",
+    "    # 'age': 'int',\n",
+    "    # 'date_joined': 'datetime',\n",
+    "    # 'customer_id': 'str'\n",
+    "}\n",
     "\n",
-    "# Example: Convert date columns\n",
-    "# df_no_duplicates['date_joined'] = pd.to_datetime(df_no_duplicates['date_joined'])\n",
+    "# Define subset columns for duplicate detection (optional)\n",
+    "# subset_columns = ['id', 'email']  # Customize based on your dataset\n",
+    "subset_columns = None  # Remove based on entire row\n",
     "\n",
-    "# Example: Convert to string\n",
-    "# df_no_duplicates['customer_id'] = df_no_duplicates['customer_id'].astype(str)\n",
+    "# Load, clean, convert and save data\n",
+    "df = load_data(input_file)\n",
     "\n",
-    "# Step 8: Check Updated Data Types\n",
-    "print(\"\\nUpdated Data Types (after conversions):\")\n",
-    "print(df_no_duplicates.dtypes)\n",
+    "if df is not None:\n",
+    "    print(\"\\n🔍 Preview of raw data:\")\n",
+    "    print(df.head())\n",
     "\n",
-    "# Step 9: Save the Cleaned Data\n",
-    "df_no_duplicates.to_csv('cleaned_data_Q2.csv', index=False)\n",
-    "print(\"\\nCleaned data saved to 'cleaned_data_Q2.csv'\")\n"
+    "    df = remove_duplicates(df, subset_columns)\n",
+    "    df = fix_data_types(df, conversions)\n",
+    "    \n",
+    "    print(\"\\n✅ Final data types:\")\n",
+    "    print(df.dtypes)\n",
+    "\n",
+    "    save_cleaned_data(df, output_file)\n"
    ]
   }
  ],
