--- a/src/Module 6/Feature Scaling & Encoding Categorical Data/Ques_1.ipynb
+++ b/src/Module 6/Feature Scaling & Encoding Categorical Data/Ques_1.ipynb
@@ -2,9 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question 1: Feature Scaling Impact on Model\n",
+      "\n",
+      "Accuracy without scaling: 1.0000\n",
+      "Accuracy with Min-Max scaling: 0.9111\n",
+      "\n",
+      "Question 2: Min-Max Scaling\n",
+      "\n",
+      "Min-Max Scaled Data:\n",
+      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+      "0           0.222222          0.625000           0.067797          0.041667\n",
+      "1           0.166667          0.416667           0.067797          0.041667\n",
+      "2           0.111111          0.500000           0.050847          0.041667\n",
+      "3           0.083333          0.458333           0.084746          0.041667\n",
+      "4           0.194444          0.666667           0.067797          0.041667\n",
+      "\n",
+      "Question 3: Standardization (Z-score Scaling)\n",
+      "\n",
+      "Standardized (Z-score) Data:\n",
+      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+      "0          -0.900681          1.019004          -1.340227         -1.315444\n",
+      "1          -1.143017         -0.131979          -1.340227         -1.315444\n",
+      "2          -1.385353          0.328414          -1.397064         -1.315444\n",
+      "3          -1.506521          0.098217          -1.283389         -1.315444\n",
+      "4          -1.021849          1.249201          -1.340227         -1.315444\n",
+      "\n",
+      "Question 4: Robust Scaling\n",
+      "\n",
+      "Robust Scaled Data:\n",
+      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+      "0          -0.538462               1.0          -0.842857         -0.733333\n",
+      "1          -0.692308               0.0          -0.842857         -0.733333\n",
+      "2          -0.846154               0.4          -0.871429         -0.733333\n",
+      "3          -0.923077               0.2          -0.814286         -0.733333\n",
+      "4          -0.615385               1.2          -0.842857         -0.733333\n"
+     ]
+    }
+   ],
    "source": [
     "# Question 1: Feature Scaling\n",
     "# Task: Explain why feature scaling is essential and demonstrate the impact of unscaled features on a machine learning model.\n",
